--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,90 +2,103 @@
 	margin: 0;
 	padding: 0;
 }
-
+@font-face {
+    font-family: titulo;
+    src: url(../font/lovehearts/edosz.ttf);
+}
+@font-face {
+    font-family: texto;
+    src: url(../font/a_little_sunshine/Chilanka.ttf);
+}
+html {
+  height: 100%;
+}
 body {
-	width: 100%;
-    height: 100%;
-    background-color: grey;
-    background-image: url("../img/logos/fondosincohete.png");
-    background-attachment: fixed; 
-    background-repeat: no-repeat; 
-    background-position: center center; 
-    background-size:100% 100%;
-    
+  width: 100%;
+  height: 100%;
+  font-family:texto;
+  background-color: grey;
+  background-image: url("../img/logos/fondosincohete.png");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100% 100%;
 }
 
-header{
-	padding: .5em 0 .5em 0;
-	display: flex;
-    align-items: stretch;
-    width: 100%;
+h1,h2{
+  font-family: titulo;
 }
 
-html{
-	height: 100%;
+
+/* header*/
+header {
+  padding: 0.5em 0 0.5em 0;
+  width: 100%;
 }
 
-nav{
-    text-align: center;
-    width: 100%
-    
+/* navegacion*/
+nav {
+  text-align: center;
+  width: 100%;
+  position: relative;
+  z-index: 2;
+
+
 }
 
-section{
-    
-        float: right;
-        width: 63%;
-        text-align: center;
-        padding-left: 3%;
-        padding-top: 3%;
-        background: rgb(255, 255, 255, 0.3);
-        margin-bottom: 2%;
-        margin-right: 22%;
-        z-index: 99;
-        position: absolute;
-        margin-left: 18%;
-  
-}
-
-aside{
-    float:left;
+/* section*/
+section {
+  margin-top:10%;
+  float: right;
+  width: 63%;
+  text-align: center;
+  padding-left: 3%;
+  padding-top: 3%;
+  background: rgb(255, 255, 255, 0.3);
+  margin-bottom: 2%;
+  margin-right: 22%;
+  z-index: 99;
   position: absolute;
-    width: 12%;
-    left:0;
-    text-decoration: none;
-    padding-left:2%;
-    padding-top:3%;
-    margin-bottom: 2%;
-    margin-left:2%; 
-    z-index: 2;
+  margin-left: 18%;
+}
+/* aside*/
+aside {
+  margin-top:10%;
+  float: left;
+  position: absolute;
+  width: 12%;
+  left: 0;
+  text-decoration: none;
+  padding-left: 2%;
+  padding-top: 3%;
+  margin-bottom: 2%;
+  margin-left: 2%;
+  z-index: 2;
 }
 
-a{
-    text-decoration: none;
-    color:white; 
+a {
+  text-decoration: none;
+  color: white;
 }
 
-li{
-    text-decoration: none; 
-    list-style:none;
+li {
+  text-decoration: none;
+  list-style: none;
 }
-
-footer{
-    position:fixed;
-    z-index: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
-    width: 100%;
-    height:3% ;
-    color:orange;
+/* footer*/
+footer {
+  position: fixed;
+  z-index: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  height: 3%;
+  color: orange;
 }
-
-
-
 /*animaciones*/
+/** ESTILOS DE LAS PARTICULAS IDENTIFICADOR Y POSICION DE LAS PARTICULAS Y SU PROFUNDIDAD **/
 #particles-js {
 	width: 100%;
 	height:100%;
@@ -95,21 +108,7 @@ footer{
 
 }
 
-#axis2:hover .move-left {
-    transform: translate(-350px,0);
-    -webkit-transform: translate(-350px,0); /** Safari & Chrome **/
-    -o-transform: translate(-350px,0); /** Opera **/
-    -moz-transform: translate(-350px,0); /** Firefox **/
-    
-}
-#axis:hover .move-left {
-    transform: translate(-350px,0);
-    -webkit-transform: translate(-350px,0); /** Safari & Chrome **/
-    -o-transform: translate(-350px,0); /** Opera **/
-    -moz-transform: translate(-350px,0); /** Firefox **/
-
-}
-
+ /** ESTILOS ANIMACIONES**/
 .object {
 	position: relative;
 /** This css rule will make the object 
@@ -117,11 +116,9 @@ move smoothly and animated **/
 	-webkit-transition: all 2s ease-in-out;
     -moz-transition: all 2s ease-in-out;
     -o-transition: all 2s ease-in-out;
-   
-
 }
 
-/** Moving object to the left **/
+/** ESTILOS DE LA GATITA ANIMACION Moving object to the left **/
 #axis2:hover .move-left{
 	transform: translate(-350px,0);
 	-webkit-transform: translate(-350px,0);
@@ -137,15 +134,14 @@ move smoothly and animated **/
   
 }
 
-/** DIAGONALLY MOVEMENT **/
+/**ESTILOS SON OPCIONES PARA ANIMAR ANIMAR ANIMARSE --->  DIAGONALLY MOVEMENT **/
 /** Move object diagonally (Northeast) **/
 #axis2:hover .move-ne{
 	transform: translate(350px,-350px);
 	-webkit-transform: translate(350px,-350px);
 	-o-transform: translate(350px,-350px); 
     -moz-transform: translate(350px,-350px);
-   
-	
+  
 }
 #axis:hover .move-ne{
 	transform: translate(350px,-350px);
@@ -156,7 +152,7 @@ move smoothly and animated **/
 	
 }
 
-/** Multiple **/
+/**ESTILOS ANIMACION COHETE Multiple **/
 #axis2:hover .multiple {
 	transform: translate(350px, -350px) rotate(360deg);
 	-webkit-transform: translate(350px, -350px) rotate(360deg);
@@ -172,24 +168,86 @@ move smoothly and animated **/
 
 }
 
+
+/*ESTILOS COHETE Y GATITA ************> HAY QUE AJUSTAR SEGUN EL TAMAÑO DE PANTALLA SU POSICION*/
+/*AJUSTESE LA GATA!! POR FAVOR AL TAMAÑO DE LA PANTALLA EN EL FICHERO MAIN Y LA LINEA MAX WIDTH  */
 .boomerang {
    left: 12px;
    top: 300px;
-  
- 
 }
 .van {
-    left: 1200px;
-    top: 467px;
-
+  /*  left: 1028px;
+    top: 467px;*/
+    left: 991px;
+    top: 395px;
 }
-
 
 .ten{
     z-index: 0;
     position: fixed;
     }
-    .two{z-index:0;
-        position: fixed;
-        }
+.two{
+    z-index:0;
+    position: fixed;
 
+        }
+		
+/*ESTILOS PLANETAS*/
+#planetarojo{
+right: -3%;
+top: 0%;
+position: absolute;
+width: 25%;
+}
+	
+#planetaverde{
+top: 375px;
+left: -380px;
+position: absolute;
+width: 63%;
+  }
+ 
+ #planetacrater{
+top: 138px;
+left: 183px;
+position: absolute;
+width: 6%;
+  }
+ 
+  #luna2{
+top: 338px;
+left: 483px;
+position: absolute;
+width: 6%;
+  }
+  
+  #planetatierra{
+top: 231px;
+right: 541;
+position: absolute;
+width: 3%;
+  }
+  
+  /*HOVER IMAGENES*/
+
+  /* Hover*/
+.hover{
+/*  position: relative;*/
+  height: 50%;
+  width: 20%;
+  float: left;
+ /* border:1px solid black;*/
+
+}
+.hover img {
+
+  position: absolute;
+  /*border:1px solid black;*/
+  transition: opacity 0.1s ease-in-out;
+
+}
+
+.hover img.color:hover{
+  opacity: 0;
+ 
+}
