--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,11 @@
 body{color:#FFF;}
 footer{position:absolute;bottom: 0; width:100%;}
 
+nav {
 
+    padding: 0em 18em 3em 18em;
+
+}
 
 
 
@@ -36,7 +40,11 @@ font-size: 50%;
 
 		}
 
+nav {
 
+    padding: 0em 0em 0em 0em;
+
+}
 
 
 
@@ -47,10 +55,14 @@ font-size: 50%;
 		position:relative;bottom: 0; width:100%;
 		font-size: 50%;
 		}
+nav {
+
+    padding: 0em 0em 0em 0em;
 
 }
-	}
 }
+	}
+
 
 
 
