--- a/css/estilo.css
+++ b/css/estilo.css
@@ -36,6 +36,7 @@ h1,h2{
 header {
   padding: 0.5em 0 0.5em 0;
   width: 100%;
+  z-index: 2;
 }
 
 /* navegacion*/
@@ -51,16 +52,16 @@ nav {
 /* section*/
 section {
   margin-top:10%;
-  float: right;
+  float: left;
   width: 63%;
   text-align: center;
   padding-left: 3%;
   padding-top: 3%;
   background: rgb(255, 255, 255, 0.3);
- margin-bottom: 10%; 
-  margin-right: 22%;
-  z-index: 99;
-  position: absolute;
+  margin-bottom: 10%; 
+  margin-right: 10%;
+  z-index: 2;
+  position: relative;
   margin-left: 18%;
 }
 /* aside*/
@@ -90,7 +91,7 @@ li {
 /* footer*/
 footer {
   position: fixed;
-  z-index: 100;
+  z-index: 2;
   left: 0;
   right: 0;
   bottom: 0;
@@ -98,7 +99,7 @@ footer {
   width: 100%;
   height: 3%;
   color: orange;
-  margin-top: 1em;
+  margin-top: 10%;
 }
 /*animaciones*/
 /** ESTILOS DE LAS PARTICULAS IDENTIFICADOR Y POSICION DE LAS PARTICULAS Y SU PROFUNDIDAD **/
@@ -242,7 +243,7 @@ width: 3%;
   /* Hover*/
 .hover{
 /*  position: relative;*/
-  height: 50%;
+  height: 10%;
   width: 20%;
   float: left;
  /* border:1px solid black;*/
