--- a/css/estilo.css
+++ b/css/estilo.css
@@ -57,6 +57,7 @@ section {
   text-align: center;
   padding-left: 3%;
   padding-top: 3%;
+  padding-bottom: 3%;
   background: rgb(255, 255, 255, 0.3);
   margin-bottom: 10%; 
   margin-right: 10%;
